--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,24 @@ plugins {
 group = 'org.example'
 version = '1.0-SNAPSHOT'
 
+sourceCompatibility = 11
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.7.0'
+    implementation 'org.seleniumhq.selenium:selenium-firefox-driver:4.17.0'
+    testImplementation 'io.github.dzmitryrak:ssc:0.4.1'
+    implementation 'org.selenide:selenide-testng:1.0.0'
     testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation group: 'com.tngtech.junit.dataprovider', name: 'junit4-dataprovider', version: '2.10'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.1'
+
 }
 
 test {
