--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
