--- a/.github/workflows/Gradle.yml
+++ b/.github/workflows/Gradle.yml
@@ -1,45 +1,30 @@
-name: Java CI with Gradle and Selenide
+name: Java CI with Gradle
 
-on:
-  push:
-    branches:
-      - main  # замените на ветку, на которой вы хотите запускать тесты
+on: [push, pull_request]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-
       - name: Start SUT
+        # Запускаем SUT,
+        # имя файла SUT будет отличаться в каждой задаче.
+        # & означает, что в фоновом режиме не блокируем терминал для запуска тестов,
+        # обязательно должен быть для запуска SUT в CI
         run: java -jar ./artifacts/app-card-delivery.jar &
-
-      - name: Build and test with Gradle
-        run: ./gradlew test
-
-      - name: Archive test results
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-results
-          path: build/test-results
-
-      - name: Archive screenshots on failure
-        uses: actions/upload-artifact@v2
-        with:
-          name: screenshots
-          path: build/reports/tests/failed
-
-      - name: Stop SUT
-        run: pkill -f 'java -jar ./artifacts/app-card-delivery.jar'
+      - name: Build with Gradle
+        # Запускаем автотесты
+        # Для проектов на базе Selenide необходимо добавить параметр для запуска браузера
+        # в headless режиме -Dselenide.headless=true, параметр --info должен остаться
+        run: -Dselenide.headless=true --info
 
