--- a/.github/workflows/Gradle.yml
+++ b/.github/workflows/Gradle.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+          # Указываете версию Node.js 20
+          node-version: '20'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Start SUT
