--- a/.github/workflows/Gradle.yml
+++ b/.github/workflows/Gradle.yml
@@ -1,32 +1,46 @@
 name: Java CI with Gradle
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-          # Указываете версию Node.js 20
-          node-version: '20'
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Start SUT
-        # Запускаем SUT,
-        # имя файла SUT будет отличаться в каждой задаче.
-        # & означает, что в фоновом режиме не блокируем терминал для запуска тестов,
-        # обязательно должен быть для запуска SUT в CI
         run: java -jar ./artifacts/app-card-delivery.jar &
-      - name: Build with Gradle
-        # Запускаем автотесты
-        # Для проектов на базе Selenide необходимо добавить параметр для запуска браузера
-        # в headless режиме -Dselenide.headless=true, параметр --info должен остаться
-        run: -Dselenide.headless=true --info
+
+      - name: Build and test with Gradle
+        run: ./gradlew test
+
+      - name: Archive test results
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-results
+          path: build/test-results
+
+      - name: Archive screenshots on failure
+        uses: actions/upload-artifact@v2
+        with:
+          name: screenshots
+          path: build/reports/tests/failed
+
+      - name: Stop SUT
+        run: pkill -f 'java -jar ./artifacts/app-card-delivery.jar'
+
 
