--- a/.github/workflows/Gradle.yml
+++ b/.github/workflows/Gradle.yml
@@ -12,12 +12,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          # Обновите версию Node.js
+          ref: v2.4.2
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          # Обновите версию Node.js
+          ref: v2.4.2
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
