--- a/.github/workflows/Gradle.yml
+++ b/.github/workflows/Gradle.yml
@@ -13,14 +13,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
-          # Обновите версию Node.js
+          # Обновите версию, указав актуальный тег или хэш
           ref: v2.4.2
 
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          # Обновите версию Node.js
-          ref: v2.4.2
+          java-version: '11'
+          distribution: 'adopt'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
