--- a/.github/workflows/Gradle.yml
+++ b/.github/workflows/Gradle.yml
@@ -26,5 +26,5 @@ jobs:
         # Запускаем автотесты
         # Для проектов на базе Selenide необходимо добавить параметр для запуска браузера
         # в headless режиме -Dselenide.headless=true, параметр --info должен остаться
-        run: -Dselenide.headless=true --info
+        run: Gradlew test - Dselenide.headless=true --info
 
